k8s/applications/web/memos/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
  namespace: memos
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - memos.k8s.eudald.gr
  rules:
    - backendRefs:
        - name: memos
          port: 5230
